2009-12-14  Piotr Fusik  <fox@scene.pl>
* asap.c, anylang.h, csharp/ASAP.ppcs:
  C# version depended on localization settings


** 2.0.0 released on 2009-12-10

2009-12-10  Piotr Fusik  <fox@scene.pl>
* win32/Makefile: reverted binary distributions from *-windows.* to *-win32.*

* flash/USAGE, README, win32/Makefile: Flash release

* java/USAGE: XHTML syntax

* INSTALL: fixed formatting

* CREDITS: added Adrian Matoga


2009-12-03  Piotr Fusik  <fox@scene.pl>
* PORTS.xml, PORTS.xsl, README, Makefile, win32/Makefile:
  added summary of differences between ports in a table

* win32/setup/asap.wxs, win32/setup/wix_mutex.pl: XBMC doesn't support file
  associations (actually opening files from command line)


2009-12-02  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs, win32/setup/Website.url, win32/Makefile:
  use <File> instead of <IniFile> for the website link (0.5 kB smaller MSI)


2009-12-01  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs: added "Uninstall shortcut"

* win32/setup/asap-dialog.jpg, win32/setup/asap-banner.jpg:
  optimized using "jhead -purejpg"


2009-11-30  Piotr Fusik  <fox@scene.pl>
* CREDITS, win32/setup/asap.wxs, win32/setup/asap-dialog.jpg,
  win32/setup/asap-banner.jpg, win32/Makefile: setup graphics by Pawel Szewczyk


2009-11-29  Piotr Fusik  <fox@scene.pl>
* asap.c: reject native modules which load in $d000-$d7ff
  - e.g. simply_tune.tm8 from Grayscale site


2009-11-27  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs: WASAP icon on desktop


2009-11-26  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs: shortcuts in the Programs menu


2009-11-25  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs, win32/setup/wix_mutex.pl:
  setting multiple "Associate files" was possible with "Change"

* win32/setup/asap.wxs: file associations didn't appear in Winamp
  nor Apollo settings


2009-11-18  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs, win32/setup/license.rtf, win32/setup/wix_mutex.pl,